--- a/latina/scss/style.scss
+++ b/latina/scss/style.scss
@@ -192,7 +192,7 @@ $maxWidth: 1280;
 }
 
 .line {
-  width: 100%;
+  width: 0%;
   height: 4px;
   overflow: hidden;
   position: fixed;
@@ -574,6 +574,74 @@ $maxWidth: 1280;
 
 .mob {
   display: none;
+}
+
+.main__hero-wrapper {
+  position: absolute;
+  inset: 0;  
+  z-index: 10;
+  background-color: #000;
+}
+.main__hero {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  justify-content: center;
+}
+.main__hero-img {
+  padding: 20px;
+  overflow: hidden;
+  max-width: calc(50% - 25px);
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+.main__hero-start {
+  max-width: calc(50% - 25px);
+}
+.hero-title {
+  font-size: 36px;
+  text-align: center;
+}
+.hero__button {
+  width: fit-content;
+  position: relative;
+  font-family: inherit;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  outline: none;
+  border: 1px solid rgba(0,0,0,0);
+  margin: 16px auto;
+  box-shadow: rgba(0,0,0,.1) 0 3px 12px 0;
+  padding: 6px 14px;
+  min-height: 40px;
+  background-color: var(--main-btn-color);
+  color: #fff;
+  border-radius: 4px;
+  &:hover {
+    background-color: var(--main-hover-color);
+  }
+}
+.main-content-wrapper {
+  display: none;
+}
+.end__wrapper {
+  position: absolute;
+  inset: 0;
+  z-index: 10;
+  display: none;
+  .main__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media (max-width: 568px) and (orientation: landscape) {
