--- a/soulmate/scss/style.scss
+++ b/soulmate/scss/style.scss
@@ -477,7 +477,21 @@ body {
   }
 }
 
-
+@media (max-width: 768px)  {
+  .main__hero {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .main__hero-img {
+    max-width: 50%;
+    padding: 0;
+    order:1
+  }
+  .main__hero-start {
+    max-width: 100%;
+    order:2
+  }
+}
 @media (max-width: 568px) and (orientation: landscape) {
   .main__header {
     display: inline-block;
@@ -485,6 +499,13 @@ body {
 }
 
 @media (max-width: 568px) {
+  .main__hero-img {
+    max-width: 94%;
+    padding: 0;
+  }
+  .main__hero-start {
+    max-width: 94%;
+  }
   .mob {
     display: block;
   }
